--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,12 @@ header {
     text-align: center;
 }
 
+span {
+    display: inline-block;
+    width: 500px;
+    vertical-align: top;
+}
+
 #searchBar {
     text-align: start;
     padding: 20px;
